# mytgbot

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  celery_beat_start.sh  celery_flower_start.sh  celery_start.sh  celery_tasks.py  database.py  django_admin_start.sh  docker-compose.yaml  entrypoint.sh  logger.py  main.py  middleware.py  mypy.ini  pyproject.toml  readme.md  settings.py  tables.py  task_manager.py  tasks.py
admin/: manage.py
admin/admin/: settings.py
admin/telegrambot/: admin.py  apps.py  models.py
buildings/: buildings_repo.py  schemas.py
migrations/: 0001.sql  0002.sql  0003.sql  0004.sql  0005.sql  0006.sql  0007_user_tasks.sql  0008_player_levels.sql  0009_player_exp.sql  0010.user_user_tasks.sql  0011_additional_tasks.sql
tasks/: schema.py  tasks_repo.py
users/: level_rewards.py  user_repo.py
